Patika-dev-project2

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-<h1>AYKUT SOLUKCU</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aykut Solukcu</title>
+</head>
+<body>
+    <h1>AYKUT SOLUKCU</h1>
 <!--Hakkımda alanı kısa bir öz geçmiş-->
 <h3>Hakkımda</h3>
 <p>Uludağ Üniversitesi 2011 yılı Matematik bölümü mezunuyum. 2012 yılında Uludağ Üniversitesi'nden Pedagojik formasyon aldım.
@@ -12,3 +21,24 @@
 </p>
 <p>Ayrıca insan ilişkilerinde başarılı ve çabuk iletişim kurabilen biriyim. Bir sorunu halletmek ve çözüm yolları bulmak için çalışırım.
 </p>
+<h3>Hobilerim</h3>
+<p>
+    Amatör fotoğrafçılık ve drone videografi ile uğraşıyorum.
+    <br>Çektiğim fotoğraflardan birkaçı ve youtube kanalımdan bir video yu sizlerle paylaşmak isterim.
+</p>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/d0cHhlAwgPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+<br>
+<img src="https://i.hizliresim.com/ixhloe7.jpg" alt="Taslar" height="600">
+
+<hr>
+<h3>Sevdiğim Diziler</h3>
+<h4>La Casa De Papel</h4>
+<a href="https://www.imdb.com/title/tt6468322/" target="_blank">
+    <img src="https://cdnntr1.img.sputniknews.com/img/103963/56/1039635617_0:0:1078:600_1440x900_80_0_1_ab474c13e39757176d5f620e6b73a9e0.jpg.webp?source-sid=not_sputnik_photo" height="300">
+</a>
+<h4>Outlander</h4>
+<a href="https://www.imdb.com/title/tt3006802/" target="_blank">
+<img src="https://www.timeturk.com/resim/detay/169/1697228.jpg" alt="Outlander" height="300">
+</a>
+</body>
+</html>
