Patika-dev-Html-task3

--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>About Us</title>
 </head>
 <body>
     <!-- Nav Start -->
@@ -34,7 +34,7 @@
         <section>
             <!-- Article Start -->
             <article>
-                <h3>Article1</h3>
+                <h3>About Us</h3>
                     <img src="https://picsum.photos/id/423/200/300.jpg" alt="">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore esse laboriosam itaque et, possimus facere dolores accusantium iure deleniti tempora!</p>
                     <p>Totam laboriosam velit ex! Nulla, quis voluptatem? Beatae consequuntur natus voluptate, at, reiciendis harum minus, rerum non molestias voluptatem exercitationem?</p>
@@ -45,25 +45,7 @@
                     </ol>
                 <hr>
             </article>
-            <article>
-                <h3>Article2</h3>
-                    <img src="https://picsum.photos/id/23/200/300.jpg" alt="">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam odio quam illo maxime, ipsum dolor laborum rem repudiandae quasi ut?</p>
-                    <p>Ipsum veniam provident nam ut, quam sed rem numquam nemo optio. Atque ipsum accusantium, aliquam voluptate dolores sunt tempore et.</p>
-                    <ol type="I">
-                        <li>Lorem, ipsum dolor.</li>
-                        <li>Voluptatum, inventore repudiandae.</li>
-                        <li>Laudantium, vero quisquam?</li>
-                    </ol>
-                <hr>
-            </article>
-            <article>
-                <h3>Article3</h3>
-                    <img src="https://picsum.photos/id/43/200/300.jpg" alt="">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque aperiam id dignissimos itaque vel eligendi obcaecati ab! Modi, nisi beatae!</p>
-                    <p>Quo inventore modi praesentium expedita maiores iste ipsum qui! Voluptas voluptatibus eligendi tempore architecto porro eius facilis, atque totam at?</p>
-                <hr>
-            </article>
+
             <!-- Article End -->
         </section>
     </main>
