--- a/index.html
+++ b/index.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aykut Solukcu</title>
+    <title>Lazanya Tarifi</title>
 </head>
-<body>
-    <h1>AYKUT SOLUKCU</h1>
-<!--Hakkımda alanı kısa bir öz geçmiş-->
-<h3>Hakkımda</h3>
-<p>Uludağ Üniversitesi 2011 yılı Matematik bölümü mezunuyum. 2012 yılında Uludağ Üniversitesi'nden Pedagojik formasyon aldım.
-    <br>Yaklaşık 10 yıldır çeşitli kurumlarda Matematik öğretmeni olarak çalışmaktayım.
-</p>
-<!--Kişisel ve karakteristik özellikler-->
-<h3>Kişisel Özellikler</h3>
-<p>Girişimcilik ve yenilikçilik özelliklerine güvenen, dinamik ve insiyatif alabilen biriyim. Verilen görevleri eksiksiz ve zamanında yerine getiririm.
-    <br>Takım çalışmasına yatkınım. Kariyerime yeni şekil vermek ve yeni dünya düzenine ayak uydurmak adın 2022 yılında yazılım alanında kendimi geliştirip 
-    projelerde yer almak hedefim.
-</p>
-<p>Ayrıca insan ilişkilerinde başarılı ve çabuk iletişim kurabilen biriyim. Bir sorunu halletmek ve çözüm yolları bulmak için çalışırım.
-</p>
-<h3>Hobilerim</h3>
-<p>
-    Amatör fotoğrafçılık ve drone videografi ile uğraşıyorum.
-    <br>Çektiğim fotoğraflardan birkaçı ve youtube kanalımdan bir video yu sizlerle paylaşmak isterim.
-</p>
-<iframe width="640" height="360" src="https://www.youtube.com/embed/d0cHhlAwgPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
-<br>
-<img src="https://i.hizliresim.com/ixhloe7.jpg" alt="Taslar" height="600">
+<body bgcolor="pink">
+    <h1 style="color: blue;">Lazanya Tarifi</h1>
+    <h3><span style="background-color: #dc143c">Gerekli Malzemeler</span></h3>
+    <ul>
+        <li>Yarım paket lazanya</li>
+        <li>300 g kıyma</li>
+        <li>2 adet  soğan</li>
+        <li>2 adet domates</li>
+        <li>2 yemek kaşığı salça</li>
+        <li>3 yemek kaşığı sıvı yağ</li>
+        <li>2 diş sarımsak</li>
+        <li>Tuz</li>
+    </ul>
+    <h4><span style="background-color: #dc143c;">Sosu İçin Gerekli Malz</span></h4>
+    <ul>
+        <li>2 yemek kaşığı tereyağı</li>
+        <li>4 yemek kaşığı un</li>
+        <li>2 su bardağı süt</li>
+    </ul>
+    <hr>
+    <h3>Nasıl Yapılır?</h3>
+    <article>
+        <ol type="I">
+            <li>Geniş bir tavaya sıvı yağı alın. Küçük küçük doğradığınız soğanları ilave edin, biraz kavurduktan sonra üzerine kıymayı ilave ederek kavurmaya devam edin.</li>
+            <li>Kıymalar yeterince kavrulunca doğradığınız sarımsakları ve kabuğunu soyup rendelediğimiz domatesleri de ilave edin ve orta ateşte 10 dakika kadar daha soteleyin.</li>
+            <li>Üzerine salçayı ekleyerek kavurun ve yaklaşık 1 su bardağı sıcak su ekleyin. Tuzunu da ekledikten sonra ocaktan alıp soğumaya bırakın.</li>
+            <li>Beşamel sos için tereyağı ve unu küçük bir tencereye koyun ve orta ateşte kavurun. Üzerine sütü azar azar ekleyin ve topaklanmaması için sürekli çırparak karıştırın. Muhallebi kıvamına gelince ocaktan alın.</li>
+            <li>Kıymalı sos ve beşamel sos hazırlandıktan sonra ısıya dayanıklı bir fırın kabını biraz yağlayın ve tabanına lazanya dizin. Lazanyaların üzerine biraz beşamel sos dökerek güzelce yayın. Ardından üzerine kıymalı harçtan dökün. Üzerine tekrar lazanya koyun. Bu işlemi malzemeleriniz bitene kadar devam ettirin.</li>
+            <li>En üstteki lazanyalara tekrar beşamel sos dökün ve kaşar peyniri rendesi serpin.</li>
+            <li>Lazanyaların yumuşaması için 10-15 dakika kadar bekletin.</li>
+            <li>Son olarak 180 derece fırında yaklaşık 15 dakika pişirin.</li>
+        </ol>
 
-<hr>
-<h3>Sevdiğim Diziler</h3>
-<h4>La Casa De Papel</h4>
-<a href="https://www.imdb.com/title/tt6468322/" target="_blank">
-    <img src="https://cdnntr1.img.sputniknews.com/img/103963/56/1039635617_0:0:1078:600_1440x900_80_0_1_ab474c13e39757176d5f620e6b73a9e0.jpg.webp?source-sid=not_sputnik_photo" height="300">
-</a>
-<h4>Outlander</h4>
-<a href="https://www.imdb.com/title/tt3006802/" target="_blank">
-<img src="https://www.timeturk.com/resim/detay/169/1697228.jpg" alt="Outlander" height="300">
-</a>
+    </article>
+    <p align=right>AFİYET OLSUN</p>
 </body>
 </html>
