--- a/photos.html
+++ b/photos.html
@@ -27,20 +27,21 @@
         <article>
             <h3>Lorem, ipsum dolor.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque vitae fuga accusamus, facilis voluptate distinctio dolore amet ut enim!</p>
-            <img src="http://picsum.photos/id/826/200/300.jpg" alt="Random Photo">
         </article>
-        <article>
-            <h3>Illo, eum ducimus!</h3>
-            <p>Quibusdam velit a hic dolores optio repellat omnis, alias aliquid accusantium aperiam eveniet, modi dolore eum cupiditate esse, ad aut.</p>
-            <img src="http://picsum.photos/id/26/200/300.jpg" alt="Random Photo">
-        </article>
-        <article>
-            <h3>Dignissimos, pariatur voluptate.</h3>
-            <p>Dolor nihil ipsa odit possimus ipsum illo odio, ad debitis recusandae, in architecto. Veniam quod sequi sint ad, dolorem ullam?</p>
-            <img src="http://picsum.photos/id/34/200/300.jpg" alt="Random Photo">
-        </article>
+        <photos>
+            <img src="http://picsum.photos/id/6/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/16/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/26/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/36/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/46/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/56/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/66/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/76/150/250.jpg" alt="">
+        <img src="http://picsum.photos/id/96/150/250.jpg" alt="">
+        </photos>
     </main>
-
+    <br>
+    <p></p>
     <!--Content End-->
 
     <!--Footer Start-->
