--- a/videos.html
+++ b/videos.html
@@ -27,20 +27,15 @@
         <article>
             <h3>Lorem, ipsum dolor.</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus atque vitae fuga accusamus, facilis voluptate distinctio dolore amet ut enim!</p>
-            <img src="http://picsum.photos/id/826/200/300.jpg" alt="Random Photo">
         </article>
-        <article>
-            <h3>Illo, eum ducimus!</h3>
-            <p>Quibusdam velit a hic dolores optio repellat omnis, alias aliquid accusantium aperiam eveniet, modi dolore eum cupiditate esse, ad aut.</p>
-            <img src="http://picsum.photos/id/26/200/300.jpg" alt="Random Photo">
-        </article>
-        <article>
-            <h3>Dignissimos, pariatur voluptate.</h3>
-            <p>Dolor nihil ipsa odit possimus ipsum illo odio, ad debitis recusandae, in architecto. Veniam quod sequi sint ad, dolorem ullam?</p>
-            <img src="http://picsum.photos/id/34/200/300.jpg" alt="Random Photo">
-        </article>
+        <photos>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/d0cHhlAwgPo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/I9GGlf8iE10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/dO7H00sWKSw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </photos>
     </main>
-
+    <br>
+    <p></p>
     <!--Content End-->
 
     <!--Footer Start-->
